--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
 
   <!-- AltDash JS and CSS -->
   <link rel="stylesheet" type="text/css" href="static/style.css" />
+  <script src="static/js/functions.js"></script>
   <script src="static/js/body-0.js"></script>
   
   
