there is a logo, it spins

--- a/templates/bodyheader.html
+++ b/templates/bodyheader.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">AltDash</a>
+      <a class="navbar-brand" href="#">AltDash<img class="logo" src="static/img/sdg_wheel.png" /></a>
     </div> <!-- /.navbar-header -->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
