--- a/static/style.css
+++ b/static/style.css
@@ -239,9 +239,6 @@ canvas {
 }
 
 .tile-row {
-    /*max-width: 94%;
-    margin-right: auto;
-    margin-left: auto;*/
     padding: 0 5px;
 }
 
@@ -259,6 +256,7 @@ canvas {
     border-width: 0;
     background-size: 100%;
     background-position: center;
+    float: right;
 }
 
 .tile-text {
@@ -267,7 +265,7 @@ canvas {
     margin-top: 7px;
 }
 
-.tile-text h5 {
+.tile-text h5, .tile-text h4, .tile-text p {
     margin-top: 3px;
     margin-bottom: 0;
     
@@ -320,3 +318,57 @@ canvas {
 #col-footer a, a:active, a:hover, a:visited {
     color: #18e;
 }
+
+
+/***************************/
+/* Logo */
+/***************************/
+/* Much appreciation to http://jsfiddle.net/gaby/9Ryvs/7/ */
+.logo {
+    position: relative;  /* to "brand" */
+    top: -29px;
+    left: -13px;
+    margin: 0;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    z-index: -1;
+    -webkit-animation-name: spin;
+    -webkit-animation-duration: 15000ms;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-name: spin;
+    -moz-animation-duration: 15000ms;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -ms-animation-name: spin;
+    -ms-animation-duration: 15000ms;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+    
+    animation-name: spin;
+    animation-duration: 15000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@-ms-keyframes spin {
+    from { -ms-transform: rotate(0deg); }
+    to { -ms-transform: rotate(360deg); }
+}
+@-moz-keyframes spin {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
