--- a/templates/charttiles.html
+++ b/templates/charttiles.html
@@ -2,7 +2,7 @@
 
 <div id="cont-body-charttiles" class="container-fluid container-body">
 
-  <div id="row-body-charttiles" class="row body-row extra-hidden">
+  <div id="row-body-charttiles" class="row body-row">
     <div id="col-scatterchart" class="col-xs-12 col-md-8">
       <div id="row-btnselect" class="row">
         <div id="col-mapbtn" class="col-xs-3">
@@ -103,7 +103,7 @@
     </div><!-- /#col-tiledetails -->
   </div><!-- /#row-body-tiledetails -->
 
-  <div id="row-body-goal-minutiae" class="row body-row">
+  <div id="row-body-goal-minutiae" class="row body-row extra-hidden">
     <div id="col-goalminutiae" class="col-xs-12">
       <div id="row-detailback" class="row">
         <div id="col-countryinfo3" class="col-xs-8 col-md-10 countryinfo">
@@ -124,7 +124,7 @@
       </div><!-- /#row-detailback -->
       <div id="row-goalminutiae">
         {% for goal in goals %}
-          <div id="col-gm-{{ goal.goal_pre }}" class="col-xs-12 goal-minutiae">
+          <div id="col-gm-{{ goal.goal_pre }}" class="col-xs-12 goal-minutiae extra-hidden">
             <a id="g{{ goal.goal_pre }}m"></a>
             <div id="col-gm-g{{ goal.goal_pre }}" class="col-xs-4 col-lg-2 tile-indiv">
               <button id="g{{ goal.goal_pre }}md2" type="button"
