footnote style and text in sdgunwb

--- a/templates/sdgunwb.html
+++ b/templates/sdgunwb.html
@@ -18,7 +18,7 @@
         for action by all countries to improve the lives of people 
         everywhere.
       </p>
-      <p>Text from the UN SDG Site</p>
+      <p class="footnote">Text from the UN SDG site</p>
     </div><!-- /#col-sdg -->
     <div id="col-un" class="col-xs-12 col-md-4">
       <h3>The United Nations</h3>
@@ -40,6 +40,7 @@
         title="UN SDG Site">UN SDG Site</a> and not modified other than to 
         facilitate the AltDash site functionality.
       </p>
+      <p class="footnote">Some text from the UN site</p>
     </div><!-- /#col-un -->
     <div id="col-wb" class="col-xs-12 col-md-4">
       <h3>The World Bank</h3>
@@ -60,6 +61,7 @@
         Bank Data Catalog">WB Data Catalog</a> and not modified other than to 
         facilitate the AltDash database functionality.
       </p>
+      <p class="footnote">Some text from the World Bank site</p>
     </div><!-- /#col-wb -->
   </div><!-- /#row-body-wbunsdg -->
 </div><!-- /#cont-body-wbunsdg -->
