--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,13 @@
 p {
     margin: 0 0 10px;
     font-size: 13px;
-    line-height: 1.3
+    line-height: 1.3;
+}
+
+.footnote {
+    margin: 0 0 5px;
+    font-size: 9px;
+    line-height: 1.3;
 }
 
 .h4, h4 {
@@ -290,14 +296,7 @@ canvas {
 /***************************/
 /* SDG, UN, WB Section */
 /***************************/
-#col-wb, #col-un, #col-sdg {
-    /*margin-top: 10px;
-    padding: 15px;*/
-}
 
-#col-wb p, #col-un p, #col-sdg p {
-    font-size: 13px;
-}
 
 /***************************/
 /* Footer */
