world map with wb regions

--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,10 @@
     display: none;
 }
 
+.kinda-hidden {
+    visibility: hidden;
+}
+
 p {
     margin: 0 0 10px;
     font-size: 13px;
@@ -10,7 +14,7 @@ p {
 
 .footnote {
     margin: 0 0 5px;
-    font-size: 9px;
+    font-size: 11px;
     line-height: 1.3;
 }
 
@@ -250,6 +254,14 @@ canvas {
 
 .tile-indiv {
     padding: 0;
+    margin-bottom: 40px;
+}
+
+.tile-indiv p {
+    position: absolute;
+    top: 120px;
+    width: 110px;
+    right: 0;
 }
 
 .tile-md {
@@ -316,6 +328,16 @@ canvas {
 
 #col-footer a, a:active, a:hover, a:visited {
     color: #18e;
+}
+
+
+/***************************/
+/* Map */
+/***************************/
+/* Much appreciation to http://simplemaps.com */
+
+div > svg > text {
+    display: none;
 }
 
 
