--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,10 @@
   <link rel="stylesheet" type="text/css" href="static/jqui/jquery-ui.min.css">
   <link rel="stylesheet" type="text/css" href="static/jqui/jquery-ui.structure.min.css">
 
+  <!-- SimpleMaps -->
+  <script src="static/map/mapdata.js"></script>   
+  <script  src="static/map/worldmap.js"></script>
+
   <!-- AltDash JS and CSS -->
   <link rel="stylesheet" type="text/css" href="static/style.css" />
   <script src="static/js/functions.js"></script>
