--- a/templates/bodyheader.html
+++ b/templates/bodyheader.html
@@ -2,22 +2,26 @@
   <div id="nav-container" class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
+      <!-- We don't actually navigate anywhere
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-menu" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      -->
       <a class="navbar-brand" href="#">AltDash<img class="logo" src="static/img/sdg_wheel.png" /></a>
     </div> <!-- /.navbar-header -->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div id="nav-menu" class="collapse navbar-collapse">
+      <!-- We don't actually navigate anywhere
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="/">Home<span class="sr-only"> (current)</span></a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
+      -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /#nav-container -->
 </nav>
