honestly, i dont even know anymore

--- a/templates/charttiles.html
+++ b/templates/charttiles.html
@@ -122,6 +122,11 @@
                   data-sender="#row-body-goal-minutiae" type="button">
             Back to Tiles
           </button>
+          <button id="btn-showall" class="btn btn-default form-control btn-btnselect" 
+                  data-toggle="extra-hidden" data-target="#row-body-goal-minutiae"
+                  data-sender="#row-body-gm-showall" type="button">
+            Show All
+          </button>
         </div><!-- /#col-backbtn2 -->
       </div><!-- /#row-detailback -->
       <div id="row-goalminutiae">
