added title to goal_design

--- a/templates/charttiles.html
+++ b/templates/charttiles.html
@@ -48,7 +48,8 @@
       {% for goal in goals %}
         <button id="g{{ goal.goal_pre }}sm" type="button"
                 class="btn btn-default tile tile-sm g{{ goal.goal_pre }}"
-                title="Goal {{ goal.goal_pre }}" data-toggle="extra-hidden"
+                title="Goal {{ goal.goal_pre }}: {{ goal.goals[0].description }}"
+                data-toggle="extra-hidden"
                 data-target="#row-body-tiledetails"
                 data-sender="#row-body-charttiles"
                 data-goal-a="g{{ goal.goal_pre }}d"
@@ -80,7 +81,8 @@
             <div id="col-tile-g{{ goal.goal_pre }}" class="col-xs-4 tile-indiv">
               <button id="g{{ goal.goal_pre }}md" type="button"
                       class="btn btn-default tile tile-md g{{ goal.goal_pre }}"
-                      title="Goal {{ goal.goal_pre }}" data-toggle="extra-hidden"
+                      title="Goal {{ goal.goal_pre }}: {{ goal.goals[0].description }}"
+                      data-toggle="extra-hidden"
                       data-target="#row-body-goal-minutiae"
                       data-sender="#row-body-tiledetails"
                       data-goal-a="g{{ goal.goal_pre }}m"
@@ -136,7 +138,8 @@
             <div id="col-gm-g{{ goal.goal_pre }}" class="col-xs-4 col-lg-2 tile-indiv">
               <button id="g{{ goal.goal_pre }}md2" type="button"
                       class="btn btn-default tile tile-md g{{ goal.goal_pre }}"
-                      title="Goal {{ goal.goal_pre }}" data-toggle="extra-hidden"
+                      title="Goal {{ goal.goal_pre }}: {{ goal.goals[0].description }}"
+                      data-toggle="extra-hidden"
                       data-target="#row-body-tiledetails"
                       data-sender="#row-body-goal-minutiae"
                       style="background-image: url('static/{{ goal.iurl_full }}');
