--- a/templates/charttiles.html
+++ b/templates/charttiles.html
@@ -156,9 +156,6 @@
             <div id="col-text-g{{ goal.goal_pre }}" class="col-xs-8 col-lg-10 tile-text"
                  style="border-top: 3px solid {{ goal.hexval }};">
               <div class="col-xs-12"><h4>{{ goal.goals[0].description }}</h4></div>
-              <div class="col-xs-12">
-                <canvas id="chart-{{ goal.goal_pre }}" height="1px"></canvas>
-              </div>
               {% for indic in goal.goals[0].indicators %}
                 <div id="col-indic{{ indic.indicator_id }}" class="col-xs-12 col-md-6">
                   <div class="col-xs-12">
@@ -172,7 +169,9 @@
                     </p>
                   </div>
                   <div id="chart-{{ indic.indicator_id }}" class="col-xs-12 indicator-chart">
-                    <canvas id="chart-{{ indic.indicator_id }}-ctx" height="1px" width="1px"></canvas>
+                    <canvas id="chart-{{ indic.indicator_id|replace(".", "") }}-ctx"
+                            height="1px" width="1px" data-color="{{ goal.hexval }}">
+                    </canvas>
                   </div>
                 </div><!-- /#col-indic{{ indic.indicator_id }} -->
                 {% if loop.index is divisibleby 2 %}
